crates/cli/tests/snapshots/lib__check@type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/type_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/type_mismatch.nemo:1:18 ]
   │
 1 │ global x : I32 = 10.0
   │                  ──┬─  
   │                    ╰─── Type mismatch. Expected I32, but got F32
───╯

[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/type_mismatch.nemo:2:48 ]
   │
 2 │ global my_fn : fn (I32) -> I32 = \(x : F32) -> F32 { x }
   │                                                ──┬─  
   │                                                  ╰─── Type mismatch. Expected I32, but got F32
───╯

[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/type_mismatch.nemo:2:40 ]
   │
 2 │ global my_fn : fn (I32) -> I32 = \(x : F32) -> F32 { x }
   │                                        ─┬─  
   │                                         ╰─── Type mismatch. Expected I32, but got F32
───╯

[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/type_mismatch.nemo:2:54 ]
   │
 2 │ global my_fn : fn (I32) -> I32 = \(x : F32) -> F32 { x }
   │                                                      ─┬  
   │                                                       ╰── Type mismatch. Expected I32, but got F32
───╯


----- stderr -----
Error: "Check failed with 4 errors"
